--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,10 @@ spring:
 server:
   port: 8086
 
+# Config de keycloak
+keycloak:
+  auth-server-url: http://localhost:9090
+  realm: product-realm
+  bearer-only: 'true'
+  resource: product-client
+  ssl-required: 'none'
